[gd_scene load_steps=2 format=3 uid="uid://bxtvy0kdsqivo"]

[ext_resource type="Script" path="res://passwordcracker.gd" id="1_63mxb"]

[node name="passwordcracker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_63mxb")

[node name="HashLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="TargetHashLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="PasswordInput" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 67.0625
offset_bottom = 31.0

[node name="FeedbackLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Attempt1" type="TextureRect" parent="FeedbackLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attempt2" type="TextureRect" parent="FeedbackLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attempt3" type="TextureRect" parent="FeedbackLabel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
